# bootcamp-python-data-engineering

./: README.md  csv-class.py  csv-pypuro.py  desafio.py  desafio_query.py  desafio_query_sql.db  docker-compose.yml  etl.py  exemplo_00.py  exemplo_01.py  exemplo_02.py  exercicios.py  main.py  pokemon.db  pyproject.toml
01-fundamentos/aula-02-type-error-try-except-if/: desafio.py
01-fundamentos/aula-03-controle-fluxo-debug-if-for-while/: desafio.py  exercicios.py  main.py
01-fundamentos/aula-04-type-hint-complex-types-functions/: README.md  arquivos.py  aula_algoritmo.py  data_science.py  desafio.py  exemplo.csv  exercicios.py
02-processamento-dados/aula-06-exercicios-de-revisao/: README.md  pyproject.toml
02-processamento-dados/aula-07-funcoes-python-estruturas-parte1/: README.md  etl.py  exercicios.py  main.py  pipeline_2.py
02-processamento-dados/aula-08-funcoes-python-etl-pandas-json/: dados.parquet  etl.py
02-processamento-dados/aula-09-funcoes-python-decoradores/: README.md
02-processamento-dados/aula11-15-poo-classes-encaps-heranca-polimorf-getteresetter/: exemplo2.csv
03-poo/aula11-15-poo-classes-encaps-heranca-polimorf-getteresetter/: exemplo.csv  usar_classe.py
03-pooaula11-15-poo-classes-encaps-heranca-polimorf-getteresetter/: csv-test.py  pyproject.toml
04-banco-dados-apis/aula-17-sqlalchemy-python-sql/: README.md  desafio.py  exemplo_01.py
04-banco-dados-apis/aula-18-api-request-pydantic-crud/: README.md  exemplo_00.py  pyproject.toml
backend/: crud.py  database.py  models.py  schemas.py
(+6 files in other folders)
