[tool.poetry]
name = "aula08-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Renato-Tecpel <renatolmb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.21.1"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
