[tool.poetry]
name = "aula09-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Renato Macedo <renatolmb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
pandas = "^2.2.3"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
